--- a/index.html
+++ b/index.html
@@ -1,79 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Simple Web App</title>
+  <meta charset="UTF-8">
+  <title>Mini Cloud Storage</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background: #f3f4f6;
+      padding: 20px;
     }
-
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 1rem;
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    h2 {
       text-align: center;
     }
-
-    nav {
-      background: #444;
-      padding: 1rem;
-      display: flex;
-      gap: 1rem;
-      justify-content: center;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 2rem;
-    }
-
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      position: fixed;
+    input[type="file"] {
       width: 100%;
-      bottom: 0;
+      padding: 10px;
     }
-
-    .button {
-      padding: 0.5rem 1rem;
-      background: #007BFF;
+    button {
+      background: #4f46e5;
       color: white;
+      padding: 10px 20px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
+      margin-top: 10px;
     }
-
-    .button:hover {
-      background: #0056b3;
+    .file-list {
+      margin-top: 20px;
+    }
+    .file-list ul {
+      list-style: none;
+      padding: 0;
+    }
+    .file-list li {
+      background: #e5e7eb;
+      padding: 10px;
+      margin-bottom: 5px;
+      border-radius: 5px;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>My Web Application</h1>
-  </header>
+<div class="container">
+  <h2>Cloud Storage System</h2>
 
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#features">Features</a>
-    <a href="#contact">Contact</a>
-  </nav>
+  <form action="/upload" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" required>
+    <button type="submit">Upload</button>
+  </form>
 
-  <main>
+  <div class="file-list">
+    <h3>Uploaded Files</h3>
+    <ul>
+      <li>example1.pdf</li>
+      <li>photo.jpg</li>
+      <!-- This list can be dynamically generated from backend -->
+    </ul>
+  </div>
+</div>
+
+</body>
+</html>
