--- a/index.html
+++ b/index.html
@@ -1,72 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Mini Cloud Storage</title>
+  <title>Railway Reservation System</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f3f4f6;
+      background: #f2f2f2;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #004080;
+      color: white;
       padding: 20px;
+      text-align: center;
     }
     .container {
+      padding: 20px;
       max-width: 600px;
       margin: auto;
       background: white;
-      padding: 30px;
+      margin-top: 30px;
       border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    h2 {
-      text-align: center;
-    }
-    input[type="file"] {
+    input, select, button {
       width: 100%;
       padding: 10px;
+      margin-top: 10px;
+      margin-bottom: 15px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
     }
     button {
-      background: #4f46e5;
+      background-color: #004080;
       color: white;
-      padding: 10px 20px;
       border: none;
-      border-radius: 5px;
       cursor: pointer;
-      margin-top: 10px;
     }
-    .file-list {
-      margin-top: 20px;
-    }
-    .file-list ul {
-      list-style: none;
-      padding: 0;
-    }
-    .file-list li {
-      background: #e5e7eb;
-      padding: 10px;
-      margin-bottom: 5px;
-      border-radius: 5px;
+    button:hover {
+      background-color: #003366;
     }
   </style>
 </head>
 <body>
 
+<header>
+  <h1>Railway Reservation System</h1>
+</header>
+
 <div class="container">
-  <h2>Cloud Storage System</h2>
+  <h2>Book Your Train Ticket</h2>
+  <form action="#" method="post">
+    <label for="name">Passenger Name:</label>
+    <input type="text" id="name" name="name" required>
 
-  <form action="/upload" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" required>
-    <button type="submit">Upload</button>
+    <label for="from">From Station:</label>
+    <input type="text" id="from" name="from" required>
+
+    <label for="to">To Station:</label>
+    <input type="text" id="to" name="to" required>
+
+    <label for="date">Travel Date:</label>
+    <input type="date" id="date" name="date" required>
+
+    <label for="class">Class:</label>
+    <select id="class" name="class" required>
+      <option value="sleeper">Sleeper</option>
+      <option value="ac1">AC First Class</option>
+      <option value="ac2">AC 2 Tier</option>
+      <option value="ac3">AC 3 Tier</option>
+    </select>
+
+    <button type="submit">Book Ticket</button>
   </form>
-
-  <div class="file-list">
-    <h3>Uploaded Files</h3>
-    <ul>
-      <li>example1.pdf</li>
-      <li>photo.jpg</li>
-      <!-- This list can be dynamically generated from backend -->
-    </ul>
-  </div>
 </div>
 
 </body>
 </html>
+
