--- a/index.html
+++ b/index.html
@@ -1,82 +1,98 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Railway Reservation System</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #f2f2f2;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #004080;
-      color: white;
       padding: 20px;
+    }
+    h1 {
       text-align: center;
+      color: #2c3e50;
     }
     .container {
-      padding: 20px;
       max-width: 600px;
       margin: auto;
       background: white;
-      margin-top: 30px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
     input, select, button {
       width: 100%;
       padding: 10px;
       margin-top: 10px;
-      margin-bottom: 15px;
-      border-radius: 4px;
+      border-radius: 5px;
       border: 1px solid #ccc;
     }
     button {
-      background-color: #004080;
+      background-color: #3498db;
       color: white;
       border: none;
       cursor: pointer;
     }
     button:hover {
-      background-color: #003366;
+      background-color: #2980b9;
     }
   </style>
 </head>
 <body>
 
-<header>
   <h1>Railway Reservation System</h1>
-</header>
 
-<div class="container">
-  <h2>Book Your Train Ticket</h2>
-  <form action="#" method="post">
-    <label for="name">Passenger Name:</label>
-    <input type="text" id="name" name="name" required>
+  <div class="container">
+    <h2>Search Trains</h2>
+    <form>
+      <label for="source">From:</label>
+      <input type="text" id="source" name="source" placeholder="Enter source station">
 
-    <label for="from">From Station:</label>
-    <input type="text" id="from" name="from" required>
+      <label for="destination">To:</label>
+      <input type="text" id="destination" name="destination" placeholder="Enter destination station">
 
-    <label for="to">To Station:</label>
-    <input type="text" id="to" name="to" required>
+      <label for="date">Date of Journey:</label>
+      <input type="date" id="date" name="date">
 
-    <label for="date">Travel Date:</label>
-    <input type="date" id="date" name="date" required>
+      <button type="submit">Search Trains</button>
+    </form>
+  </div>
 
-    <label for="class">Class:</label>
-    <select id="class" name="class" required>
-      <option value="sleeper">Sleeper</option>
-      <option value="ac1">AC First Class</option>
-      <option value="ac2">AC 2 Tier</option>
-      <option value="ac3">AC 3 Tier</option>
-    </select>
+  <div class="container" style="margin-top: 30px;">
+    <h2>Book Ticket</h2>
+    <form>
+      <label for="train">Train Number:</label>
+      <input type="text" id="train" name="train" placeholder="Enter train number">
 
-    <button type="submit">Book Ticket</button>
-  </form>
-</div>
+      <label for="passenger">Passenger Name:</label>
+      <input type="text" id="passenger" name="passenger" placeholder="Enter name">
+
+      <label for="age">Age:</label>
+      <input type="number" id="age" name="age" min="1" placeholder="Enter age">
+
+      <label for="gender">Gender:</label>
+      <select id="gender" name="gender">
+        <option value="">-- Select Gender --</option>
+        <option value="male">Male</option>
+        <option value="female">Female</option>
+        <option value="other">Other</option>
+      </select>
+
+      <button type="submit">Book Ticket</button>
+    </form>
+  </div>
+
+  <div class="container" style="margin-top: 30px;">
+    <h2>View Bookings</h2>
+    <form>
+      <label for="pnr">Enter PNR Number:</label>
+      <input type="text" id="pnr" name="pnr" placeholder="Enter PNR">
+
+      <button type="submit">View Booking</button>
+    </form>
+  </div>
 
 </body>
 </html>
-
